[package]
name = "lightspeed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
async-channel = "1.9"
bincode = "2.0.1"
clap = { version = "4.4.18", features = ["derive"] }
gethostname = "1.1.0"
local-ip-address = "0.6.5"
memmap2 = "0.9.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
blake3 = "1.5"
sha2 = "0.10"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "net", "time", "fs", "io-util", "sync"] }
quinn = "0.11.9"
rustls = "0.23.35"
rcgen = "0.14.6"
num_cpus = "1.17.0"
